--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,15 @@
 				<a href ="">設定ボタン</a>
 			</div>
 			<h2>New book</h2>
+			<%= form_for(@book, url: books_path ) do |f| %>
+				<lavel class ="title">Title</lavel>
+				<%= f.text_field :title, class: "title-box" %>
+				<lavel class ="body">Opinion</lavel>
+				<%= f.text_area :body, class: "body-box" %>
+				<div class ="row">
+					<%= f.submit 'Create Book'%>
+				</div>
+			<% end %>
 		</div>
 		<div class ="col"></div>
 	</div>
