--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,12 @@
         </div>
         <ul class ="header-nav-right">
           <%if user_signed_in? %>
-            <li class ="header-list"><%= link_to "Home", users_path %></li>
+            <li class ="header-list"><%= link_to "Home", user_path(current_user.id) %></li>
             <li class ="header-list"><%= link_to "Users", users_path %></li>
             <li class ="header-list"><%= link_to "Books", books_path %></li>
             <li class ="header-list"><%= link_to "logout", destroy_user_session_path, method: :delete %></li>
           <% else %>
-            <li class ="header-list"><%= link_to "Home", users_path %></li>
+            <li class ="header-list"><%= link_to "Home", user_path(current_user.id) %></li>
             <li class ="header-list"><%= link_to "About","#" %></li>
             <li class ="header-list"><%= link_to "Sign up", new_user_registration_path %></li>
             <li class ="header-list"><%= link_to "login", new_user_session_path %></li>
