--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
 					<p><%= link_to "プロフィール設定", edit_user_path(current_user.id) %></p>
 			</div>
 			<h2>New book</h2>
-			<%= form_for(@book, url: books_path) do |f| %>
+			<%= form_for(@book, url: book_path) do |f| %>
 				<lavel class ="title">Title</lavel>
 					<%= f.text_field :title, class: "title-box" %>
 				<lavel class ="body">Opinion</lavel>
@@ -51,16 +51,13 @@
 					</tr>
 				</thead>
 				<tbody>
-					<% @books.each do |book| %>
-						<tr>
-							<td><%= book.title %></td>
-							<td><%= book.body %></td>
-						</tr>
-					<% end %>
-				</tbody>
+				<% @books.each do |book| %>
+					<tr>
+						<td><%= book.title %></td>
+						<td><%= book.body %></td>
+					</tr>
 				<% end %>
-
-
+				</tbody>
 			</table>
 		</div>
 	</div>
