--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,1 +1,24 @@
-投稿editページ
+		<div class ="col">
+			<h2>Editing Book</h2>
+			<%= form_for(@book) do |f| %>
+				<% if @book.errors.any? %>
+				  <div class="alert alert-warning">
+				    <ul>
+				      <% @book.errors.full_messages.each do |message| %>
+				        <li><%= message %></li>
+				      <% end %>
+				    </ul>
+				  </div>
+				<% end %>
+				<lavel class ="title">Title</lavel>
+					<%= f.text_field :title, class: "title-box" %>
+				<lavel class ="body">Opinion</lavel>
+					<%= f.text_area :body, class: "body-box" %>
+				<div class ="row">
+					<%= f.submit 'Update Book'%>
+				</div>
+			<% end %>
+			<%= link_to "Show", book_path, class: "link"%>
+			|
+			<%= link_to "Back", books_path, class: "link" %>
+		</div>
