--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,20 +1,29 @@
-<h2>Book detail</h2>
-<table class ="table">
-	<tbody>
-		<tr>
-			<td>
-				<%= attachment_image_tag @user, :profile_image, size: "60x60", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %>
-				<%= @user.name %>
-			</td>
-			<% @book.each do |book| %>
-				<td><%= book.title %></td>
-				<td><%= book.body %></td>
-			<% end %>
-			<td><%= link_to "Edit", edit_book_path(current_user.id) %></td>
-			<td><%= link_to "Destroy", book_path, method: :delete %></td>
-		</tr>
-	</tbody>
-</table>
+<div class ="container">
+	<div class ="row">
+		<%= render 'users/list', book: @book, user: @user %>
+		<div class ="col-xs-9">
+			<%= flash[:update] %>
+			<h2>Book detail</h2>
+			<table class ="table">
+				<tbody>
+					<tr>
+						<td>
+							<%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></br>
+							<a href ="/users/<%=@user.id%>"><%= @user.name%></a>
+						</td>
+						<% @books.each do |book| %>
+							<td><a href ="/books/<%=book.id%>"><%= book.title %></a></td>
+							<td><%= book.body %></td>
+							<td><%= link_to "Edit", edit_book_path(book.id) %></td>
+						<% end %>
+						<td><%= link_to "Destroy", book_path, method: :delete , "data-confirm" => "本当に削しますか？"%></td>
+					</tr>
+
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
 
 
 
