--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,24 +11,26 @@
   </head>
 
   <body>
-    <div class ="header clearfix">
+    <div class ="header">
       <div class ="container">
         <div class ="header-nav-left">
           <p class ="header-logo">Bookers</p>
         </div>
-        <ul class ="header-nav-right">
-          <%if user_signed_in? %>
-            <li class ="header-list"><%= link_to "Home", user_path(current_user.id) %></li>
-            <li class ="header-list"><%= link_to "Users", users_path %></li>
-            <li class ="header-list"><%= link_to "Books", books_path %></li>
-            <li class ="header-list"><%= link_to "logout", destroy_user_session_path, method: :delete %></li>
-          <% else %>
-            <li class ="header-list"><%= link_to "Home", "/" %></li>
-            <li class ="header-list"><%= link_to "About","#" %></li>
-            <li class ="header-list"><%= link_to "Sign up", new_user_registration_path %></li>
-            <li class ="header-list"><%= link_to "login", new_user_session_path %></li>
-          <% end %>
-        </ul>
+        <nav>
+          <ul class ="header-nav-right">
+            <%if user_signed_in? %>
+              <li><%= link_to "Home", user_path(current_user.id), class: "header-list-icon" %></li>
+              <li><%= link_to "Users", users_path, class: "header-list"  %></li>
+              <li><%= link_to "Books", books_path, class: "header-list"  %></li>
+              <li><%= link_to "logout", destroy_user_session_path, method: :delete, class: "header-list"  %></li>
+            <% else %>
+              <li><%= link_to "Home", "/", class: "header-list"  %></li>
+              <li><%= link_to "About","#", class: "header-list"  %></li>
+              <li><%= link_to "Sign up", new_user_registration_path, class: "header-list"  %></li>
+              <li><%= link_to "login", new_user_session_path, class: "header-list"  %></li>
+            <% end %>
+          </ul>
+        </nav>
       </div>
     </div>
     <%= yield %>
