--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,40 +1,50 @@
-		<div class ="col">
-			<%= flash[:create] %>
-			<%= flash[:update] %>
-			<h2>User info</h2>
-			<%= attachment_image_tag user, :profile_image, size: "60x60", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %>
-			<table class ="table">
-				<tbody>
-					<tr>
-						<td>name</td>
-						<td> <%= user.name %></td>
-					</tr>
-					<tr>
-						<td>introduction</td>
-						<td><%= user.introduction %></td>
-					</tr>
-				</tbody>
-			</table>
-			<div class ="row">
-					<p><%= link_to "プロフィール設定", edit_user_path(current_user.id) %></p>
-			</div>
-			<h2>New book</h2>
-				<%= form_for(book, url: books_path) do |f| %>
-				<% if book.errors.any? %>
-				  <div class="alert alert-warning">
-				    <ul>
-				      <% book.errors.full_messages.each do |message| %>
-				        <li><%= message %></li>
-				      <% end %>
-				    </ul>
-				  </div>
-				<% end %>
-				<lavel class ="title">Title</lavel>
-					<%= f.text_field :title, class: "title-box" %>
-				<lavel class ="body">Opinion</lavel>
-					<%= f.text_area :body, class: "body-box" %>
-				<div class ="row">
-					<%= f.submit 'Create Book'%>
-				</div>
+<div class ="col-xs-3">
+	<%= flash[:create] %>
+	<%= flash[:update] %>
+	<h2>User info</h2>
+	<% if book.errors.any? %>
+	  <div class="alert alert-warning">
+	    <ul>
+	      <% book.errors.full_messages.each do |message| %>
+	        <li><%= message %></li>
+	      <% end %>
+	    </ul>
+	  </div>
+	<% end %>
+	<%= attachment_image_tag user, :profile_image, size: "100x100", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %>
+	<table class ="table">
+		<tbody>
+			<tr>
+				<td>name</td>
+				<td><%= user.name %></td>
+			</tr>
+			<tr>
+				<td>introduction</td>
+				<td><%= user.introduction %></td>
+			</tr>
+		</tbody>
+	</table>
+	<div class ="row">
+		<div class ="col-xs-12">
+			<% if user.id == current_user.id %>
+				<p><%= link_to "プロフィール設定", edit_user_path(current_user.id), class: "btn btn-default" %></p>
+			<% else %>
+				<p><%= link_to "プロフィール設定", user_path(current_user.id), class: "btn btn-default" %></p>
 			<% end %>
 		</div>
+	</div>
+	<h2>New book</h2>
+	<%= form_for(book) do |f| %>
+		<div class ="row">
+			<lavel class ="title">Title</lavel>
+			<div class ="col-xs-12"><%= f.text_field :title, class: "title-box" %></div>
+		</div>
+		<div class ="row">
+			<lavel class ="body">Opinion</lavel>
+			<div class ="col-xs-12"><%= f.text_area :body, class: "body-box" %></div>
+		</div>
+		<div class ="row">
+			<%= f.submit 'Create Book'%>
+		</div>
+	<% end %>
+</div>
