--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,26 @@
-<h2>Users</h2>
-<table class ="table">
-	<thead>
-		<tr>
-			<th>Image</th>
-			<th>Name</th>
-			<th></th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @users.each do |user| %>
-			<tr>
-				<td><%= attachment_image_tag user, :profile_image, format: 'jpg',fallback: "no_img.jpg", size: "60x60" %></td>
-				<td><%= user.name %></td>
-				<td><a href ="/users/<%= user.id%>">Show</a></td>
-			</tr>
-		<% end %>
-	</tbody>
-</table>
+<div class ="container">
+	<div class ="row">
+		<%= render 'users/list', book: @book, user: @user %>
+		<div class ="col-xs-9">
+			<h2>Users</h2>
+			<table class ="table">
+				<thead>
+					<tr>
+						<th>Image</th>
+						<th>Name</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @users.each do |user| %>
+						<tr>
+							<td><%= attachment_image_tag user, :profile_image, format: 'jpg',fallback: "no_img.jpg", size: "60x60" %></td>
+							<td><%= user.name %></td>
+							<td><a href ="/users/<%= user.id%>">Show</a></td>
+						</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
