--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,24 +1,24 @@
-		<div class ="col">
-			<h2>Editing Book</h2>
+<div class ="container">
+	<%= render 'layouts/error_messages'%>
+	<div class ="row">
+		<div class ="col-xs-offset-3 col-xs-6">
+			<h1>Editing Book</h1>
 			<%= form_for(@book) do |f| %>
-				<% if @book.errors.any? %>
-				  <div class="alert alert-warning">
-				    <ul>
-				      <% @book.errors.full_messages.each do |message| %>
-				        <li><%= message %></li>
-				      <% end %>
-				    </ul>
-				  </div>
-				<% end %>
-				<lavel class ="title">Title</lavel>
-					<%= f.text_field :title, class: "title-box" %>
-				<lavel class ="body">Opinion</lavel>
-					<%= f.text_area :body, class: "body-box" %>
-				<div class ="row">
-					<%= f.submit 'Update Book'%>
+				<div class ="field row">
+					<lavel class ="title">Title</lavel><br>
+					<%= f.text_field :title, class: "col-xs-12 title-box" %><br>
+				</div>
+				<div class ="field row">
+					<lavel class ="body">Opinion</lavel><br>
+					<%= f.text_area :body, class: "col-xs-12 body-box" %><br>
+				</div>
+				<div class ="action row">
+					<%= f.submit 'Update Book', class: "col-xs-12 Update-btn" %><br>
 				</div>
 			<% end %>
 			<%= link_to "Show", book_path, class: "link"%>
 			|
 			<%= link_to "Back", books_path, class: "link" %>
 		</div>
+	</div>
+</div>
