--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,5 @@
 <div class ="container">
+	<%= render 'layouts/error_messages' %>
 	<div class ="row">
 		<%= render 'users/list', book: @book, user: @user %>
 		<div class ="col-xs-9">
