--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,9 @@
   	display: block;
   	clear: both;
 }
+body {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 .container {
 	margin-right: auto;
 	margin-left: auto;
@@ -34,27 +37,40 @@
 }
 .header {
 	background-color: black;
+	margin-bottom: 20px;
 }
 .header-nav-left{
 	float: left;
 }
 .header-logo {
 	font-size :20px;
-	padding-top: 10px;
 	color: white;
-
 }
 .header-nav-right {
 	float:right;
+	margin-right: -15px;
+	margin-bottom: 0;
+}
+li {
+	text-align: center;
+	display: inline;
 }
 .header-list {
-	list-style: none;
-	color: white;
-	float:left;
-	padding-right: 10px;
+	color: #9d9d9d;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	padding-right: 15px;
+	padding-left: 15px;
+	display: inline-block;
+}
+p {
+	text-align: right;
 }
 
-.h2 {
+
+
+
+h2 {
 	font-size: 30px;
 	margin-top: 20px;
     margin-bottom: 10px;
@@ -65,6 +81,43 @@
 }
 .col-xs-12 {
 	width: 100%;
+}
+th {
+	font-weight: bold;
+}
+lavel {
+	display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+.field, .action {
+	margin-bottom: 10px;
+}
+
+
+
+.Update-btn {
+	color: #fff;
+	background-color: #337ab7;
+	border-color: #2e6da4;
+}
+.Update-btn:hover {
+	color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
+}
+.create-btn {
+	color: #fff;
+	background-color: #337ab7;
+	border-color: #2e6da4;
+	padding: 6px 12px;
+	border-radius: 4px;
+}
+.create-btn:hover {
+	color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
 }
 
 
