--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,24 +1,43 @@
+
 <div class ="container">
+	<%= flash[:create] %>
+	<%= flash[:update] %>
 	<div class ="row">
 		<%= render 'users/list', book: @book, user: @user %>
 		<div class ="col-xs-9">
-			<%= flash[:update] %>
 			<h2>Book detail</h2>
 			<table class ="table">
+				<thead>
+					<tr>
+						<th></th>
+						<th>Title</th>
+						<th>Opinion</th>
+					</tr>
+				</thead>
 				<tbody>
 					<tr>
-						<td>
-							<%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></br>
-							<a href ="/users/<%=@user.id%>"><%= @user.name%></a>
-						</td>
-						<% @books.each do |book| %>
-							<td><a href ="/books/<%=book.id%>"><%= book.title %></a></td>
-							<td><%= book.body %></td>
-							<td><%= link_to "Edit", edit_book_path(book.id) %></td>
+						<% if @user.id == current_user.id %>
+								<td>
+									<%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></br>
+									<a href ="/users/<%= @user.id %>"><%= @user.name%></a>
+								</td>
+								<% @books.each do |book| %>
+									<td><a href ="/books/<%= @book.id %>"><%= book.title %></a></td>
+									<td><%= book.body %></td>
+									<td><%= link_to "Edit", edit_book_path(book.id) %></td>
+									<td><%= link_to "Destroy", book_path, method: :delete , "data-confirm" => "本当に削しますか？"%></td>
+								<% end %>
+						<% else %>
+								<td>
+									<%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></br>
+									<a href ="/users/<%= @user.id %>"><%= @user.name%></a>
+								</td>
+								<% @books.each do |book| %>
+									<td><a href ="/books/<%= book.id %>"><%= book.title %></a></td>
+									<td><%= book.body %></td>
+								<% end %>
 						<% end %>
-						<td><%= link_to "Destroy", book_path, method: :delete , "data-confirm" => "本当に削しますか？"%></td>
 					</tr>
-
 				</tbody>
 			</table>
 		</div>
