--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -1,16 +1,24 @@
-<div class ="top-container">
-<h1>welcome to Bookers !!</h1>
-<p>
-	In Bookers,<br>
-	you can share and exchange your opinion , inpressions ,and emotions<br>
-	about various books!
-</p>
-<div class ="btn-wrapper">
-	<li class ="btn-login">
-		<%= link_to "Log in",new_user_session_path %>
-	</li>
-	<li class ="btn-signup">
-		<%= link_to "Sign Up",new_user_registration_path %>
-	</li>
+<div class ="container">
+	<%= render 'layouts/notifications' %>
+	<div class ="row">
+		<div class ="col-xs-offset-3 col-xs-6">
+			<h1>welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>BooksBookers !!</h1>
+			<p>
+				<span class="glyphicon glyphicon-book" aria-hidden="true"></span>BooksIn Bookers,<br>
+				you can share and exchange your opinion , inpressions ,and emotions<br>
+				about various books!
+			</p>
+			<div class ="row">
+				<li class ="btn-login col-xs-12">
+					<%= link_to "Log in",new_user_session_path %>
+				</li>
+			</div>
+			<div class ="row">
+				<li class ="btn-signup col-xs-12">
+					<%= link_to "Sign Up",new_user_registration_path %>
+				</li>
+			</div>
+		</div>
+	</div>
 </div>
-</div>
+
