--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,50 +1,44 @@
+
 <div class ="col-xs-3">
-	<%= flash[:create] %>
-	<%= flash[:update] %>
 	<h2>User info</h2>
-	<% if book.errors.any? %>
-	  <div class="alert alert-warning">
-	    <ul>
-	      <% book.errors.full_messages.each do |message| %>
-	        <li><%= message %></li>
-	      <% end %>
-	    </ul>
-	  </div>
-	<% end %>
 	<%= attachment_image_tag user, :profile_image, size: "100x100", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %>
 	<table class ="table">
 		<tbody>
 			<tr>
-				<td>name</td>
-				<td><%= user.name %></td>
+				<th>name</th>
+				<th><%= user.name %></th>
 			</tr>
 			<tr>
-				<td>introduction</td>
-				<td><%= user.introduction %></td>
+				<th>introduction</th>
+				<th><%= user.introduction %></th>
 			</tr>
 		</tbody>
 	</table>
 	<div class ="row">
 		<div class ="col-xs-12">
 			<% if user.id == current_user.id %>
-				<p><%= link_to "プロフィール設定", edit_user_path(current_user.id), class: "btn btn-default" %></p>
+				   <%= link_to  edit_user_path(current_user.id), class: "btn btn-default col-xs-12" do %>
+						<span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+				   <% end %>
 			<% else %>
-				<p><%= link_to "プロフィール設定", user_path(current_user.id), class: "btn btn-default" %></p>
+					<%= link_to  user_path(current_user.id), class: "btn btn-default col-xs-12" do %>
+						<span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+				 	<% end %>
 			<% end %>
 		</div>
 	</div>
 	<h2>New book</h2>
 	<%= form_for(book) do |f| %>
-		<div class ="row">
+		<div class ="field row">
 			<lavel class ="title">Title</lavel>
-			<div class ="col-xs-12"><%= f.text_field :title, class: "title-box" %></div>
+			<div class ="col-xs-12"><%= f.text_field :title, class: "col-xs-12 title-box" %></div>
 		</div>
-		<div class ="row">
+		<div class ="field row">
 			<lavel class ="body">Opinion</lavel>
-			<div class ="col-xs-12"><%= f.text_area :body, class: "body-box" %></div>
+			<div class ="col-xs-12"><%= f.text_area :body, class: "col-xs-12 body-box" %></div>
 		</div>
-		<div class ="row">
-			<%= f.submit 'Create Book'%>
+		<div class ="action row">
+			<%= f.submit 'Create Book' ,class: "col-xs-12 create-btn" %>
 		</div>
 	<% end %>
 </div>
