--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,21 +1,34 @@
 <div class ="container">
-	<h2>User info</h2>
-	<%= form_for(@user , url: user_path) do |f| %>
-		<% if @user.errors.any? %>
-		  <div class="alert alert-warning">
-		    <ul>
-		      <% @user.errors.full_messages.each do |message| %>
-		        <li><%= message %></li>
-		      <% end %>
-		    </ul>
-		  </div>
-		<% end %>
-		<lavel class ="name">Nmae</lavel>
-			<%= f.text_field :name, class: "name-box" %>
-		<lavel class ="iamge">Image</lavel>
-			<%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
-		<lavel class ="introduction">Introduction</lavel>
-		<%= f.text_area :introduction, class: "introduction-box" %>
-		<%= f.submit 'Update User'%>
+	<% if @user.errors.any? %>
+	  <div class="alert alert-warning">
+	    <ul>
+	      <h2> errors prohibited this book from being saved</h2>
+	      <% @user.errors.full_messages.each do |message| %>
+	        <li><%= message %></li>
+	      <% end %>
+	    </ul>
+	  </div>
 	<% end %>
+	<div class ="row">
+		<div class ="col-xs-offset-3 col-xs-6">
+			<h1>User info</h1>
+			<%= form_for(@user , url: user_path) do |f| %>
+				<div class ="row field">
+					<lavel class ="name">Nmae</lavel>
+					<%= f.text_field :name, class: "col-xs-12 name-box" %>
+				</div>
+				<div class ="row field">
+					<lavel class ="iamge">Image</lavel>
+					<%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+				</div>
+				<div class ="row field">
+					<lavel class ="introduction">Introduction</lavel>
+					<%= f.text_area :introduction, class: "col-xs-12 introduction-box" %>
+				</div>
+				<div class ="row action">
+					<%= f.submit 'Update User' ,class: "col-xs-12 Update-btn"%>
+				</div>
+			<% end %>
+		</div>
+	</div>
 </div>
