--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div class ="container">
+	<%= render 'layouts/notifications' %>
 	<div class ="row">
 		<%= render 'users/list', book: @book, user: @user %>
 		<div class ="col-xs-9">
@@ -6,7 +7,7 @@
 			<table class ="table">
 				<thead>
 					<tr>
-						<th>img画像</th>
+						<th></th>
 						<th>Title</th>
 						<th>Opinion</th>
 					</tr>
@@ -14,8 +15,8 @@
 				<tbody>
 				<% @books.each do |book| %>
 					<tr>
-						<td><%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></td>
-						<td><a href ="/books/<%=book.id%>"><%= book.title %></a></td>
+						<td><%= attachment_image_tag @user, :profile_image, size: "40x40", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></td>
+						<td><a href ="/books/<%= book.id %>"><%= book.title %></a></td>
 						<td><%= book.body %></td>
 					</tr>
 				<% end %>
