--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
                 <% end %>
               </li>
               <li>
-                <%= link_to homes_about_path, class: "header-list" do %>
+                <%= link_to home_about_path, class: "header-list" do %>
                   <span class="glyphicon glyphicon-link" aria-hidden="true"></span>About
                 <% end %>
                 </li>
