--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -16,15 +16,9 @@
 	</table>
 	<div class ="row">
 		<div class ="col-xs-12">
-			<% if user.id == current_user.id %>
-				   <%= link_to  edit_user_path(current_user.id), class: "btn btn-default col-xs-12" do %>
-						<span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-				   <% end %>
-			<% else %>
-					<%= link_to  user_path(current_user.id), class: "btn btn-default col-xs-12" do %>
-						<span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-				 	<% end %>
-			<% end %>
+			<%= link_to  edit_user_path(user.id), class: "btn btn-default col-xs-12" do %>
+				<span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+	   	 	<% end %>
 		</div>
 	</div>
 	<h2>New book</h2>
