--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
 	<%= flash[:create] %>
 	<%= flash[:update] %>
 	<div class ="row">
-		<%= render 'users/list', book: @book, user: @user %>
+		<%= render 'users/list', book: @book_new, user: @user %>
 		<div class ="col-xs-9">
 			<h2>Book detail</h2>
 			<table class ="table">
@@ -16,26 +16,15 @@
 				</thead>
 				<tbody>
 					<tr>
-						<% if @user.id == current_user.id %>
-								<td>
-									<%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></br>
-									<a href ="/users/<%= @user.id %>"><%= @user.name%></a>
-								</td>
-								<% @books.each do |book| %>
-									<td><a href ="/books/<%= @book.id %>"><%= book.title %></a></td>
-									<td><%= book.body %></td>
-									<td><%= link_to "Edit", edit_book_path(book.id) %></td>
-									<td><%= link_to "Destroy", book_path, method: :delete , "data-confirm" => "本当に削しますか？"%></td>
-								<% end %>
-						<% else %>
-								<td>
-									<%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></br>
-									<a href ="/users/<%= @user.id %>"><%= @user.name%></a>
-								</td>
-								<% @books.each do |book| %>
-									<td><a href ="/books/<%= book.id %>"><%= book.title %></a></td>
-									<td><%= book.body %></td>
-								<% end %>
+						<td>
+							<%= attachment_image_tag @book.user, :profile_image, size: "50x50", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></br>
+							<a href ="/users/<%= @book.user.id %>"><%= @book.user.name %></a>
+						</td>
+						<td><a href ="/books/<%= @book.id %>"><%= @book.title %></a></td>
+						<td><%= @book.body %></td>
+						<% if current_user.id == @book.user.id %>
+							<td><%= link_to "Edit", edit_book_path(@book.id), class: "edit_btn" %></td>
+							<td><%= link_to "Destroy", book_path, method: :delete , class: "dleate_btn", "data-confirm" => "本当に削しますか？"%></td>
 						<% end %>
 					</tr>
 				</tbody>
