--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -3,22 +3,17 @@
 	<div class ="row">
 		<div class ="col-xs-offset-3 col-xs-6">
 			<h1>welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>BooksBookers !!</h1>
-			<p>
-				<span class="glyphicon glyphicon-book" aria-hidden="true"></span>BooksIn Bookers,<br>
+			<p class ="home-p">
+				In<span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers,<br>
 				you can share and exchange your opinion , inpressions ,and emotions<br>
 				about various books!
 			</p>
 			<div class ="row">
-				<li class ="btn-login col-xs-12">
-					<%= link_to "Log in",new_user_session_path %>
-				</li>
+				<li><%= link_to "Log in",new_user_session_path, class: "login-btn col-xs-12" %></li>
 			</div>
 			<div class ="row">
-				<li class ="btn-signup col-xs-12">
-					<%= link_to "Sign Up",new_user_registration_path %>
-				</li>
+				<li><%= link_to "Sign Up",new_user_registration_path, class: "signup-btn col-xs-12" %></li>
 			</div>
 		</div>
 	</div>
 </div>
-
