--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
 				<tbody>
 				<% @books.each do |book| %>
 					<tr>
-						<td><%= attachment_image_tag @user, :profile_image, size: "40x40", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></td>
+						<td><%= attachment_image_tag book.user , :profile_image, size: "40x40", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></td>
 						<td><a href ="/books/<%= book.id %>"><%= book.title %></a></td>
 						<td><%= book.body %></td>
 					</tr>
