--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,7 +2,7 @@
 	<%= render 'layouts/notifications' %>
 	<div class ="row">
 		<div class ="col-xs-offset-3 col-xs-6">
-			<h1>welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>BooksBookers !!</h1>
+			<h1>welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers !!</h1>
 			<p class ="home-p">
 				In<span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers,<br>
 				you can share and exchange your opinion , inpressions ,and emotions<br>
