--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -24,11 +24,11 @@
 	<h2>New book</h2>
 	<%= form_for(book) do |f| %>
 		<div class ="field row">
-			<lavel class ="title">Title</lavel>
+			<label class ="title">Title</label>
 			<div class ="col-xs-12"><%= f.text_field :title, class: "col-xs-12 title-box" %></div>
 		</div>
 		<div class ="field row">
-			<lavel class ="body">Opinion</lavel>
+			<label class ="body">Opinion</label>
 			<div class ="col-xs-12"><%= f.text_area :body, class: "col-xs-12 body-box" %></div>
 		</div>
 		<div class ="action row">
