--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,15 +14,15 @@
 			<h1>User info</h1>
 			<%= form_for(@user , url: user_path) do |f| %>
 				<div class ="row field">
-					<lavel class ="name">Nmae</lavel>
+					<label class ="name">Nmae</label>
 					<%= f.text_field :name, class: "col-xs-12 name-box" %>
 				</div>
 				<div class ="row field">
-					<lavel class ="iamge">Image</lavel>
+					<label class ="iamge">Image</label>
 					<%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
 				</div>
 				<div class ="row field">
-					<lavel class ="introduction">Introduction</lavel>
+					<label class ="introduction">Introduction</label>
 					<%= f.text_area :introduction, class: "col-xs-12 introduction-box" %>
 				</div>
 				<div class ="row action">
