--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,13 +15,31 @@
 				</thead>
 				<tbody>
 					<% @books.each do |book| %>
-					<tr>
-						<th>
-							<a href = "/users/<%=book.user.id%>"><%= attachment_image_tag book.user, :profile_image, size: "40x40", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></a>
-						</th>
-						<th><a href = "/books/<%=book.id%>"><%= book.title %></a></th>
-						<th><%= book.body %></th>
-					</tr>
+						<tr>
+							<th>
+								<a href = "/users/<%=book.user.id%>"><%= attachment_image_tag book.user, :profile_image, size: "40x40", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></a>
+							</th>
+							<th><a href = "/books/<%=book.id%>"><%= book.title %></a></th>
+							<th><%= book.body %></th>
+
+							<% if book.favorited_by?(current_user) %>
+								<th>
+									<%= link_to book_favorites_path(book), method: :delete do %>
+										<i class="fa fa-heart" aria-hidden="true" style="color: #666;"></i>
+										<%= book.favorites.count %>
+									<% end %>
+								</th>
+							<% else %>
+								<th>
+									<%= link_to book_favorites_path(book), method: :post do %>
+										<i class="fa fa-heart-o" aria-hidden="true"></i>
+										<%= book.favorites.count %>
+									<% end %>
+								</th>
+							<% end %>
+
+							<th>コメント数 <%= book.bookcomments.count %></th>
+						</tr>
 					<% end %>
 				</tbody>
 			</table>
