--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,13 +22,53 @@
 						</td>
 						<td><a href ="/books/<%= @book.id %>"><%= @book.title %></a></td>
 						<td><%= @book.body %></td>
-						<% if current_user.id == @book.user.id %>
-							<td><%= link_to "Edit", edit_book_path(@book.id), class: "edit_btn" %></td>
-							<td><%= link_to "Destroy", book_path, method: :delete , class: "dleate_btn", "data-confirm" => "本当に削しますか？"%></td>
+						<% if @book.favorited_by?(current_user) %>
+							<td>
+								<%= link_to book_favorites_path(@book), method: :delete do %>
+									<i class="fa fa-heart" aria-hidden="true" style="color: #666;"></i>
+									<%= @book.favorites.count %>
+								<% end %>
+							</td>
+						<% else %>
+							<td>
+								<%= link_to book_favorites_path(@book), method: :post do %>
+									<i class="fa fa-heart-o" aria-hidden="true"></i>
+									<%= @book.favorites.count %>
+								<% end %>
+							</td>
 						<% end %>
+						<td>コメント数 <%= @book.bookcomments.count %></td>
 					</tr>
 				</tbody>
 			</table>
+			<table>
+				<thead>
+					<% @book.bookcomments.each do |bookcomment| %>
+					<tr>
+						<th>
+							<%= attachment_image_tag bookcomment.user, :profile_image, size: "50x50", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></br>
+							<%= bookcomment.user.name %>
+						</th>
+						<th><%= bookcomment.comment %></th>
+						<th>
+							<% if @book.user == current_user %>
+								<%= link_to "Destroy", book_bookcomment_path(bookcomment.book, bookcomment), method: :delete, class: "dleate_btn" %>
+							<% end %>
+						</th>
+					</tr>
+				</thead>
+			<% end %>
+			</table>
+
+
+			<%= form_for [@book, @bookcomment] do |f| %>
+				<div class ="field row">
+					<div class ="col-xs-12">
+						<%= f.text_area :comment ,class: "float-left textarea"%>
+						<%= f.submit '送信' %>
+					</div>
+				</div>
+			<% end %>
 		</div>
 	</div>
 </div>
