--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,12 +75,16 @@ li {
     background-color: transparent;
 }
 p {
-	text-align: right;
+	text-align: left;
 }
 .home-p {
 	text-align: left;
 
 }
+.footer_logo {
+	text-align: right;
+}
+
 
 
 
