--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,6 +38,10 @@
 							</td>
 						<% end %>
 						<td>コメント数 <%= @book.bookcomments.count %></td>
+						<% if @book.user == current_user %>
+							<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
+							<td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
+						<% end %>
 					</tr>
 				</tbody>
 			</table>
