--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
     <%= yield %>
     <footer>
       <div class ="container">
-        <p>CopyRight Infratop.inc</p>
+        <p class ="footer_logo">CopyRight Infratop.inc</p>
       </div>
     </footer>
   </body>
