--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -12,13 +12,25 @@
 				<th>introduction</th>
 				<th><%= user.introduction %></th>
 			</tr>
+			<tr>
+				<th>follows</th>
+				<th><a href ="/relationships/<%= user.id %>/follow"><%= user.followings.count %></a></th>
+			</tr>
+			<tr>
+				<th>followers</th>
+				<th><a href ="/relationships/<%= user.id %>/follower"><%= user.followers.count %></a></th>
+			</tr>
 		</tbody>
 	</table>
 	<div class ="row">
 		<div class ="col-xs-12">
-			<%= link_to  edit_user_path(user.id), class: "btn btn-default col-xs-12" do %>
-				<span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-	   	 	<% end %>
+			<% if controller.controller_name == 'users' && controller.action_name == 'show' %>
+				<%= render 'layouts/relationship', user: @user %>
+			<% else %>
+				<%= link_to  edit_user_path(user.id), class: "btn btn-default col-xs-12" do %>
+					<span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+		   	 	<% end %>
+			<% end %>
 		</div>
 	</div>
 	<h2>New book</h2>
