--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,6 +16,9 @@
 						<tr>
 							<td><%= attachment_image_tag user, :profile_image, format: 'jpg',fallback: "no_img.jpg", size: "40x40" %></td>
 							<td><%= user.name %></td>
+							<td>フォロー数  <%= user.followings.count %></td>
+							<td>フォロワー数  <%= user.followers.count %></td>
+							<td><%= render 'layouts/relationship', user: @user %></td>
 							<td><a class ="show-btn" href ="/users/<%= user.id%>">Show</a></td>
 						</tr>
 					<% end %>
