--- a/app/views/layouts/_relationship.html.erb
+++ b/app/views/layouts/_relationship.html.erb
@@ -1,14 +1,29 @@
-
-<% unless current_user == user %>
-  <% if current_user.following?(user) %>
-    <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
-      <%= hidden_field_tag :follow_id, user.id %>
-      <%= f.submit 'Unfollow', class: 'btn btn-danger btn-block' %>
+<% if controller.controller_name == 'users' && controller.action_name == 'index' %>
+  <% unless current_user == user %>
+    <% if current_user.following?(user) %>
+      <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
+        <%= hidden_field_tag :follow_id, user.id %>
+        <%= f.submit 'フォロー外す', class: 'btn unfollow-btn'%>
+      <% end %>
+    <% else %>
+      <%= form_for(current_user.relationships.build(follow_id: user.id)) do |f| %>
+        <%= hidden_field_tag :follow_id, user.id %>
+        <%= f.submit 'フォローする', class: 'btn follow-btn' %>
+      <% end %>
     <% end %>
-  <% else %>
-    <%= form_for(current_user.relationships.build(follow_id: user.id)) do |f| %>
-      <%= hidden_field_tag :follow_id, user.id %>
-      <%= f.submit 'Follow', class: 'btn btn-primary btn-block' %>
+  <% end %>
+<% else %>
+  <% unless current_user == user %>
+    <% if current_user.following?(user) %>
+      <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
+        <%= hidden_field_tag :follow_id, user.id %>
+        <%= f.submit 'フォロー外す', class: 'btn unfollow-btn btn-block' %>
+      <% end %>
+    <% else %>
+      <%= form_for(current_user.relationships.build(follow_id: user.id)) do |f| %>
+        <%= hidden_field_tag :follow_id, user.id %>
+        <%= f.submit 'フォローする', class: 'btn follow-btn btn-block' %>
+      <% end %>
     <% end %>
   <% end %>
 <% end %>
