--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -44,7 +44,7 @@
 			<div class ="col-xs-12"><%= f.text_area :body, class: "col-xs-12 body-box" %></div>
 		</div>
 		<div class ="action row">
-			<%= f.submit 'Create Book' ,class: "col-xs-12 create-btn" %>
+			<%= f.submit 'Create Book' ,class: "col-xs-12 btn create-btn" %>
 		</div>
 	<% end %>
 </div>
