--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -161,15 +161,13 @@ label {
 }
 .create-btn {
 	color: #fff;
-	background-color: #337ab7;
-	border-color: #2e6da4;
+	background-color: #005eb8;
 	padding: 6px 12px;
-	border-radius: 4px;
+	border-radius: 3px;
 }
 .create-btn:hover {
 	color: #fff;
-    background-color: #286090;
-    border-color: #204d74;
+    background-color: #0063ff;
 }
 .edit_btn {
 	color: #fff;
@@ -185,14 +183,13 @@ label {
 }
 .dleate_btn {
 	color: #fff;
-    background-color: #bf0000;
-    border-color: #d43f3a;
+    background-color: #ff6b5c;
 	border-radius: 3px;
 	padding: 5px 10px;
 }
 .dleate_btn:hover {
 	color: #fff;
-	background-color: #f70b00;
+	background-color: #ff4d5c;
 }
 .show-btn {
 	color: #fff;
@@ -204,6 +201,23 @@ label {
 	color: #fff;
     background-color: #0063ff;
 }
+.unfollow-btn {
+	color: #fff;
+    background-color: #ff6b5c;
+}
+.unfollow-btn:hover {
+	color: #fff;
+    background-color: #ff4d5c;
+}
+.follow-btn {
+	color: #fff;
+    background-color: #52d05c;
+}
+.follow-btn:hover {
+	color: #fff;
+    background-color: #3fee5c;
+}
+
 
 
 
