--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,13 @@
         </nav>
       </div>
     </div>
+    <div class ="container">
+      <%= form_tag(searchs_search_path, :method => 'get') do %>
+          <%= select_tag(:option, options_for_select([["user", "1"],["book","2"]]))%> 
+          <%= text_field_tag :search %>
+          <%= submit_tag 'Search' %>
+      <% end %>
+    </div>
     <%= yield %>
     <footer>
       <div class ="container">
