--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,15 +65,18 @@
         </nav>
       </div>
     </div>
+
     <div class ="container">
-      <div class ="search_box">
-        <%= form_tag(searchs_search_path, :method => 'get') do %>
-            <%= text_field_tag :search %>
-            <%= select_tag(:model, options_for_select([["USER", "1"],["BOOK","2"]]))%>
-            <%= select_tag(:choice, options_for_select([["完全一致", "1"],["前方一致","2"],["後方一致","3"],["部分一致","4"]]))%>
-            <%= submit_tag 'Search' %>
-        <% end %>
-      </div>
+      <% if user_signed_in? %>
+        <div class ="search_box">
+          <%= form_tag(searchs_search_path, :method => 'get') do %>
+              <%= text_field_tag :search %>
+              <%= select_tag(:model, options_for_select([["USER", "1"],["BOOK","2"]]))%>
+              <%= select_tag(:choice, options_for_select([["完全一致", "1"],["前方一致","2"],["後方一致","3"],["部分一致","4"]]))%>
+              <%= submit_tag 'Search' %>
+          <% end %>
+        </div>
+      <% end %>
     </div>
     <%= yield %>
     <footer>
