--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,21 +18,7 @@
 						<td><%= attachment_image_tag book.user , :profile_image, size: "40x40", format: 'jgg', fallback: "no_img.jpg", class: "user-image" %></td>
 						<td><a href ="/books/<%= book.id %>"><%= book.title %></a></td>
 						<td><%= book.body %></td>
-						<% if book.favorited_by?(current_user) %>
-							<td>
-								<%= link_to book_favorites_path(book), method: :delete do %>
-									<i class="fa fa-heart" aria-hidden="true" style="color: #666;"></i>
-									<%= book.favorites.count %>
-								<% end %>
-							</td>
-						<% else %>
-							<td>
-								<%= link_to book_favorites_path(book), method: :post do %>
-									<i class="fa fa-heart-o" aria-hidden="true"></i>
-									<%= book.favorites.count %>
-								<% end %>
-							</td>
-						<% end %>
+						<td id="like-<%= book.id %>"><%= render partial: 'layouts/like',locals: {book: book} %></td>
 						<td>コメント数 <%= book.bookcomments.count %></td>
 					</tr>
 				<% end %>
